Avoid unnecessary Files operations in UrlUpdaterTests